--- a/docker/keycloak/Dockerfile
+++ b/docker/keycloak/Dockerfile
@@ -11,4 +11,4 @@ USER root
 COPY --from=builder /tmp/target/*.jar /opt/keycloak/providers/app.jar
 USER 1000
 
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start-dev"]
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
