--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: docker/keycloak/Dockerfile
       args:
         - KEYCLOAK_IMAGE=${KEYCLOAK_IMAGE}
+    command: start-dev
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
